--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^5.1.0
   convex_bottom_bar: ^3.2.0
   flutter_launcher_icons: ^0.13.1
+  flutter_email_sender: ^5.0.0
 
 dev_dependencies:
   flutter_test:
